# extralit-hf-space

./: .gitignore  CLAUDE.md  Dockerfile  NOTICE  Procfile  pyproject.toml
.github/workflows/: build-hf-space.yml  integration-test.yml
extralit_ocr/: extract.py  jobs.py
scripts/: start.sh
src/: app.py
src/extralit_ocr/: __init__.py  jobs.py
