[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extralit-hf-space"
version = "0.1.0"
description = "Extralit HuggingFace Space with Elasticsearch and Redis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymupdf4llm",
    "rq",
    "redis",
    "httpx",
    "honcho",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
